added about me box

--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 <body>
 
+<!--Header Img-->
 <img id="header-image" src="moriah-watermark.jpg" alt="cartoon of Moriah and a cat">
+
+<!--Future Nav Bar-->
+<div id="navbar">
+    <h2>Hi, I'm a future nav bar!</h2>
+</div>
+
+<div id="about-me">
+    <h3>About Me</h3>
+        <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
+        <br>
+            <br>
+            I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a>
+
+
+
+
+    </p>
+</div>
+
 
 
 
