added projects section

--- a/index.html
+++ b/index.html
@@ -17,17 +17,62 @@
     <h2>Hi, I'm a future nav bar!</h2>
 </div>
 
+<!--About me section-->
+
 <div id="about-me">
-    <h3>About Me</h3>
+    <h3 class="text-center">About Me</h3>
         <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
         <br>
             <br>
-            I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a>
+            I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a>I am seeking full time employment as a Software Engineer beginning in July 2020.
+        <br>
+            <br>
+            In addition to my Codeup experience, I bring years of experience as a financial services representative. I have experience with IRS tax guidelines and U.S. Department of Education regulations.
+            <br>
+            <br>
+            My interests include kayaking, aviation and aircraft, robots and artificial intelligence.
+    </p>
+</div>
 
+<!--Connect section-->
 
-
+<div id="connect" class="container-fluid">
+    <h3 class="text-center">Connect</h3>
+    <ul>
+        <li><a href="https://github.com/moriahhumphries" target="_blank">Github</a></li>
+        <br>
+        <li><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank">LinkedIn</a></li>
+    </ul>
+    <p>
 
     </p>
+</div>
+
+<container id="main-container">
+<!--Projects section-->
+
+
+
+<div id="main-project">
+    <h3 class="text-center">Projects</h3>
+
+    <div id="coffee-project">
+        <h5 id="coffee-header">Coffee Project</h5>
+
+    <p>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur cum deleniti dolorem dolores eius esse illo impedit inventore, minima, nemo, nisi optio pariatur quasi quod repellendus rerum veniam voluptate!
+    </p>
+    </div>
+
+
+        <div id="weather-project">
+            <h5 id="weather-header">Weather Project</h5>
+
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur cum deleniti dolorem dolores eius esse illo impedit inventore, minima, nemo, nisi optio pariatur quasi quod repellendus rerum veniam voluptate!
+            </p>
+        </div>
+
 </div>
 
 
@@ -40,8 +85,7 @@
 
 
 
-
-
+</container>
 
 <script src=".gitignore/keys.js"></script>
 <script src="jquery.js"></script>
