--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Moriah Humphries</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="webpage-style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -52,9 +53,20 @@
 <!--Projects section-->
 
 
-
 <div id="main-project">
     <h3 class="text-center">Projects</h3>
+
+<!--    Weather Project-->
+
+    <div id="weather-project">
+        <h5 id="weather-header">Weather Project</h5>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur cum deleniti dolorem dolores eius esse illo impedit inventore, minima, nemo, nisi optio pariatur quasi quod repellendus rerum veniam voluptate!
+        </p>
+    </div>
+
+<!--    Coffee Project-->
 
     <div id="coffee-project">
         <h5 id="coffee-header">Coffee Project</h5>
@@ -65,13 +77,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur
     </div>
 
 
-        <div id="weather-project">
-            <h5 id="weather-header">Weather Project</h5>
 
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur cum deleniti dolorem dolores eius esse illo impedit inventore, minima, nemo, nisi optio pariatur quasi quod repellendus rerum veniam voluptate!
-            </p>
-        </div>
 
 </div>
 
