added images to project section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!--Future Nav Bar-->
 <div id="navbar">
-    <h2>Hi, I'm a future nav bar!</h2>
+    <h2 class="text-center">Hi, I'm a future nav bar!</h2>
 </div>
 
 <!--About me section-->
@@ -64,6 +64,7 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur cum deleniti dolorem dolores eius esse illo impedit inventore, minima, nemo, nisi optio pariatur quasi quod repellendus rerum veniam voluptate!
         </p>
+        <img src="weatherimage.png" alt="weather project image" id="weather-img">
     </div>
 
 <!--    Coffee Project-->
@@ -74,6 +75,7 @@
     <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur cum deleniti dolorem dolores eius esse illo impedit inventore, minima, nemo, nisi optio pariatur quasi quod repellendus rerum veniam voluptate!
     </p>
+        <img src="coffeeimage.png" alt="coffee project image" id="coffee-img">
     </div>
 
 
