added description for weather project

--- a/index.html
+++ b/index.html
@@ -60,9 +60,15 @@
 
     <div id="weather-project">
         <h5 id="weather-header">Weather Project</h5>
-
+        <br>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur cum deleniti dolorem dolores eius esse illo impedit inventore, minima, nemo, nisi optio pariatur quasi quod repellendus rerum veniam voluptate!
+            An application created during Codeup's javascript and jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
+            <br>
+            <br>
+            The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.
+            <br>
+            <br>
+            The user can also drag and drop the pin to update the weather for the pin's location.
         </p>
         <img src="weatherimage.png" alt="weather project image" id="weather-img">
     </div>
