updated coffee project description

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h5 id="weather-header">Weather Project</h5>
         <br>
         <p>
-            An application created during Codeup's javascript and jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
+            An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
             <br>
             <br>
             The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.
@@ -79,7 +79,11 @@
         <h5 id="coffee-header">Coffee Project</h5>
 
     <p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur cum deleniti dolorem dolores eius esse illo impedit inventore, minima, nemo, nisi optio pariatur quasi quod repellendus rerum veniam voluptate!
+Created with a partner during a pair programming exercise in Codeup's Javascript module.
+        <br>
+        <br>
+
+        This application allows for the user to select their desired roast of coffee, and search by name within the roast category.
     </p>
         <img src="coffeeimage.png" alt="coffee project image" id="coffee-img">
     </div>
