updated layout for extra small screens

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Moriah Humphries</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="webpage-style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,7 +21,7 @@
 <!--About me section-->
 
 <div id="about-me">
-    <h3 class="text-center">About Me</h3>
+    <h2 class="text-center">About Me</h2>
         <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
         <br>
             <br>
@@ -38,7 +38,7 @@
 <!--Connect section-->
 
 <div id="connect" class="container-fluid">
-    <h3 class="text-center">Connect</h3>
+    <h2 class="text-center">Connect</h2>
     <ul>
         <li><a href="https://github.com/moriahhumphries" target="_blank">Github</a></li>
         <br>
@@ -54,7 +54,7 @@
 
 
 <div id="main-project">
-    <h3 class="text-center">Projects</h3>
+    <h2 class="text-center">Projects</h2>
 
 <!--    Weather Project-->
 
