updated padding, working on nav bar

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         <li><a href="https://github.com/moriahhumphries" target="_blank">Github</a></li>
         <br>
         <li><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank">LinkedIn</a></li>
+        <br>
+        <li>Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top">moriah.humphries@gmail.com</a></li>
     </ul>
     <p>
 
