--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!--Header Img-->
-<img id="header-image" src="moriah-watermark.jpg" alt="cartoon of Moriah and a cat">
+<img id="header-image" src="moriah.jpg" alt="cartoon of Moriah and a cat">
 
 <!--Future Nav Bar-->
 <div id="navbar">
@@ -22,10 +22,13 @@
 
 <div id="about-me">
     <h2 class="text-center">About Me</h2>
+    <div id="icon-photo" class="d-flex justify-content-center mb-3">
+    <img src="moriah-icon.jpg" alt="icon" id="icon">
+    </div>
         <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
         <br>
             <br>
-            I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a>I am seeking full time employment as a Software Engineer beginning in July 2020.
+            I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a> I am seeking full time employment as a Software Engineer beginning in July 2020.
         <br>
             <br>
             In addition to my Codeup experience, I bring years of experience as a financial services representative. I have experience with IRS tax guidelines and U.S. Department of Education regulations.
