updated nav bar, in progress

--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
 <body>
 
 <!--Header Img-->
+<div id="header-div">
 <img id="header-image" src="moriah.jpg" alt="cartoon of Moriah and a cat">
+</div>
 
-<!--Future Nav Bar-->
-<div id="navbar">
-    <h2 class="text-center">Hi, I'm a future nav bar!</h2>
+<!--Future Nav Bar for XL screens-->
+<div id="navbar-section">
+    <nav id="navbar">
+    <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
+        <li ><a href="#about-me" class="nav-li">About Me</a></li>
+        <li>Connect</a></li>
+        <li class="nav-li">Projects</li>
+    </ul>
+    </nav>
+<!--    <h2 class="text-center">Hi, I'm a future nav bar!</h2>-->
 </div>
 
 <!--About me section-->
@@ -112,6 +121,7 @@ Created with a partner during a pair programming exercise in Codeup's Javascript
 
 <script src=".gitignore/keys.js"></script>
 <script src="jquery.js"></script>
+<script src="webpage-js.js.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
