updated colors and anchor tags on nav bar, font

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <div id="navbar-section">
     <nav id="navbar">
     <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
-        <li ><a href="#about-me" class="nav-li">About Me</a></li>
-        <li>Connect</a></li>
-        <li class="nav-li">Projects</li>
+        <li class="nav-li" ><a href="#about-me">About Me</a></li>
+        <li class="nav-li"><a href="#connect">Connect</a></li>
+        <li class="nav-li"><a href="#main-project">Projects</a></li>
     </ul>
     </nav>
 <!--    <h2 class="text-center">Hi, I'm a future nav bar!</h2>-->
@@ -52,11 +52,11 @@
 <div id="connect" class="container-fluid">
     <h2 class="text-center">Connect</h2>
     <ul>
-        <li><a href="https://github.com/moriahhumphries" target="_blank">Github</a></li>
+        <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>
         <br>
-        <li><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank">LinkedIn</a></li>
+        <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank" class="contact-link">LinkedIn</a></li>
         <br>
-        <li>Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top">moriah.humphries@gmail.com</a></li>
+        <li class="outside-link">Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top" class="contact-link">moriah.humphries@gmail.com</a></li>
     </ul>
     <p>
 
@@ -75,7 +75,7 @@
     <div id="weather-project">
         <h5 id="weather-header">Weather Project</h5>
         <br>
-        <p>
+        <p class="outside-link">
             An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
             <br>
             <br>
