--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 <!--    <h2 class="text-center">Hi, I'm a future nav bar!</h2>-->
 </div>
-
+<main id="main-container">
 <!--About me section-->
 
 <div id="about-me">
@@ -63,7 +63,7 @@
     </p>
 </div>
 
-<container id="main-container">
+
 <!--Projects section-->
 
 
@@ -117,7 +117,7 @@ Created with a partner during a pair programming exercise in Codeup's Javascript
 
 
 
-</container>
+</main>
 
 <script src=".gitignore/keys.js"></script>
 <script src="jquery.js"></script>
