added new anchor tags to adjust fixed nav bar positioning

--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
 <img id="header-image" src="moriah.jpg" alt="cartoon of Moriah and a cat">
 </div>
 
-<!--Future Nav Bar for XL screens-->
+<!--Nav Bar-->
 <div id="navbar-section">
     <nav id="navbar">
     <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
-        <li class="nav-li" ><a href="#about-me">About Me</a></li>
-        <li class="nav-li"><a href="#connect">Connect</a></li>
-        <li class="nav-li"><a href="#main-project">Projects</a></li>
+        <li class="nav-li" ><a href="#about-me-anchor">About Me</a></li>
+        <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
+        <li class="nav-li"><a href="#project-anchor">Projects</a></li>
     </ul>
     </nav>
 <!--    <h2 class="text-center">Hi, I'm a future nav bar!</h2>-->
 </div>
 <main id="main-container">
 <!--About me section-->
+<div id="about-me-anchor">
 
+</div>
 <div id="about-me">
     <h2 class="text-center">About Me</h2>
     <div id="icon-photo" class="d-flex justify-content-center mb-3">
@@ -48,7 +50,9 @@
 </div>
 
 <!--Connect section-->
+    <div id="connect-anchor">
 
+    </div>
 <div id="connect" class="container-fluid">
     <h2 class="text-center">Connect</h2>
     <ul>
@@ -65,7 +69,9 @@
 
 
 <!--Projects section-->
+    <div id="project-anchor">
 
+    </div>
 
 <div id="main-project">
     <h2 class="text-center">Projects</h2>
