added icon to nav bar, changed color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="navbar-section">
     <nav id="navbar">
     <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
-        <li class="nav-li" ><a href="#about-me-anchor">About Me</a></li>
+        <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
         <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
         <li class="nav-li"><a href="#project-anchor">Projects</a></li>
     </ul>
