--- a/index.html
+++ b/index.html
@@ -10,108 +10,120 @@
 </head>
 <body>
 
-<!--Header Img-->
-<div id="header-div">
-<img id="header-image" src="moriah.jpg" alt="cartoon of Moriah and a cat">
-</div>
-
-<!--Nav Bar-->
-<div id="navbar-section">
-    <nav id="navbar">
-    <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
-        <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
-        <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
-        <li class="nav-li"><a href="#project-anchor">Projects</a></li>
-    </ul>
-    </nav>
-<!--    <h2 class="text-center">Hi, I'm a future nav bar!</h2>-->
-</div>
-<main id="main-container">
-<!--About me section-->
-<div id="about-me-anchor">
-
-</div>
-<div id="about-me">
-    <h2 class="text-center">About Me</h2>
-    <div id="icon-photo" class="d-flex justify-content-center mb-3">
-    <img src="moriah-icon.jpg" alt="icon" id="icon">
-    </div>
-        <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
-        <br>
-            <br>
-            I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a> I am seeking full time employment as a Software Engineer beginning in July 2020.
-        <br>
-            <br>
-            In addition to my Codeup experience, I bring years of experience as a financial services representative. I have experience with IRS tax guidelines and U.S. Department of Education regulations.
-            <br>
-            <br>
-            My interests include kayaking, aviation and aircraft, robots and artificial intelligence.
-    </p>
-</div>
-
-<!--Connect section-->
-    <div id="connect-anchor">
-
-    </div>
-<div id="connect" class="container-fluid">
-    <h2 class="text-center">Connect</h2>
-    <ul>
-        <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>
-        <br>
-        <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank" class="contact-link">LinkedIn</a></li>
-        <br>
-        <li class="outside-link">Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top" class="contact-link">moriah.humphries@gmail.com</a></li>
-    </ul>
-    <p>
-
-    </p>
+<div id="sidebar">
+    <img src="wood.jpg" alt="wood pattern" id="sidebar-img">
 </div>
 
 
-<!--Projects section-->
-    <div id="project-anchor">
-
-    </div>
-
-<div id="main-project">
-    <h2 class="text-center">Projects</h2>
-
-<!--    Weather Project-->
-
-    <div id="weather-project">
-        <h5 id="weather-header">Weather Project</h5>
-        <br>
-        <p class="outside-link">
-            An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
-            <br>
-            <br>
-            The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.
-            <br>
-            <br>
-            The user can also drag and drop the pin to update the weather for the pin's location.
-        </p>
-        <img src="weatherimage.png" alt="weather project image" id="weather-img">
-    </div>
-
-<!--    Coffee Project-->
-
-    <div id="coffee-project">
-        <h5 id="coffee-header">Coffee Project</h5>
-
-    <p>
-Created with a partner during a pair programming exercise in Codeup's Javascript module.
-        <br>
-        <br>
-
-        This application allows for the user to select their desired roast of coffee, and search by name within the roast category.
-    </p>
-        <img src="coffeeimage.png" alt="coffee project image" id="coffee-img">
-    </div>
 
 
 
 
-</div>
+
+<!--&lt;!&ndash;BRIGHT WEBSITE&ndash;&gt;-->
+
+<!--&lt;!&ndash;Header Img&ndash;&gt;-->
+<!--<div id="header-div">-->
+<!--<img id="header-image" src="moriah.jpg" alt="cartoon of Moriah and a cat">-->
+<!--</div>-->
+
+<!--&lt;!&ndash;Nav Bar&ndash;&gt;-->
+<!--<div id="navbar-section">-->
+<!--    <nav id="navbar">-->
+<!--    <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">-->
+<!--        <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>-->
+<!--        <li class="nav-li"><a href="#connect-anchor">Connect</a></li>-->
+<!--        <li class="nav-li"><a href="#project-anchor">Projects</a></li>-->
+<!--    </ul>-->
+<!--    </nav>-->
+<!--&lt;!&ndash;    <h2 class="text-center">Hi, I'm a future nav bar!</h2>&ndash;&gt;-->
+<!--</div>-->
+<!--<main id="main-container">-->
+<!--&lt;!&ndash;About me section&ndash;&gt;-->
+<!--<div id="about-me-anchor">-->
+
+<!--</div>-->
+<!--<div id="about-me">-->
+<!--    <h2 class="text-center">About Me</h2>-->
+<!--    <div id="icon-photo" class="d-flex justify-content-center mb-3">-->
+<!--    <img src="moriah-icon.jpg" alt="icon" id="icon">-->
+<!--    </div>-->
+<!--        <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.-->
+<!--        <br>-->
+<!--            <br>-->
+<!--            I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a> I am seeking full time employment as a Software Engineer beginning in July 2020.-->
+<!--        <br>-->
+<!--            <br>-->
+<!--            In addition to my Codeup experience, I bring years of experience as a financial services representative. I have experience with IRS tax guidelines and U.S. Department of Education regulations.-->
+<!--            <br>-->
+<!--            <br>-->
+<!--            My interests include kayaking, aviation and aircraft, robots and artificial intelligence.-->
+<!--    </p>-->
+<!--</div>-->
+
+<!--&lt;!&ndash;Connect section&ndash;&gt;-->
+<!--    <div id="connect-anchor">-->
+
+<!--    </div>-->
+<!--<div id="connect" class="container-fluid">-->
+<!--    <h2 class="text-center">Connect</h2>-->
+<!--    <ul>-->
+<!--        <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>-->
+<!--        <br>-->
+<!--        <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank" class="contact-link">LinkedIn</a></li>-->
+<!--        <br>-->
+<!--        <li class="outside-link">Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top" class="contact-link">moriah.humphries@gmail.com</a></li>-->
+<!--    </ul>-->
+<!--    <p>-->
+
+<!--    </p>-->
+<!--</div>-->
+
+
+<!--&lt;!&ndash;Projects section&ndash;&gt;-->
+<!--    <div id="project-anchor">-->
+
+<!--    </div>-->
+
+<!--<div id="main-project">-->
+<!--    <h2 class="text-center">Projects</h2>-->
+
+<!--&lt;!&ndash;    Weather Project&ndash;&gt;-->
+
+<!--    <div id="weather-project">-->
+<!--        <h5 id="weather-header">Weather Project</h5>-->
+<!--        <br>-->
+<!--        <p class="outside-link">-->
+<!--            An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>-->
+<!--            <br>-->
+<!--            <br>-->
+<!--            The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.-->
+<!--            <br>-->
+<!--            <br>-->
+<!--            The user can also drag and drop the pin to update the weather for the pin's location.-->
+<!--        </p>-->
+<!--        <img src="weatherimage.png" alt="weather project image" id="weather-img">-->
+<!--    </div>-->
+
+<!--&lt;!&ndash;    Coffee Project&ndash;&gt;-->
+
+<!--    <div id="coffee-project">-->
+<!--        <h5 id="coffee-header">Coffee Project</h5>-->
+
+<!--    <p>-->
+<!--Created with a partner during a pair programming exercise in Codeup's Javascript module.-->
+<!--        <br>-->
+<!--        <br>-->
+
+<!--        This application allows for the user to select their desired roast of coffee, and search by name within the roast category.-->
+<!--    </p>-->
+<!--        <img src="coffeeimage.png" alt="coffee project image" id="coffee-img">-->
+<!--    </div>-->
+
+
+
+
+<!--</div>-->
 
 
 
