testing background layout

--- a/index.html
+++ b/index.html
@@ -9,16 +9,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-
+<container id="main-container">
 <div id="sidebar">
     <img src="wood.jpg" alt="wood pattern" id="sidebar-img">
 </div>
 
+<!--    <div id="left-background">-->
+<!--    <img src="left-space.png" alt="left-wall" id="left-img">-->
+<!--</div>-->
+
+<!--    <div id="left-space1">-->
+<!--        <img src="left-space.png" alt="left-wall" id="left-space-img1">-->
+<!--    </div>-->
+
+<!--    <div id="right-space1">-->
+<!--        <img src="right-space.png" alt="right-wall" id="right-space-img1">-->
+<!--    </div>-->
+<!--<div id="right-background">-->
+<!--    <img src="right-crop.png" alt="image of plant" id="right-img">-->
+<!--</div>-->
 
 
 
 
-
+</container>
 
 <!--&lt;!&ndash;BRIGHT WEBSITE&ndash;&gt;-->
 
