updated nav bar

--- a/index.html
+++ b/index.html
@@ -9,30 +9,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-<container id="main-container">
+<main id="main-container">
 <div id="sidebar">
-    <img src="wood.jpg" alt="wood pattern" id="sidebar-img">
+<!--    <img src="wood.jpg" alt="wood pattern" id="sidebar-img">-->
+    <div id="navbar-section">-->
+            <nav id="navbar">
+            <ul class="d-flex nav flex-column">
+                <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
+                <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
+                <li class="nav-li"><a href="#project-anchor">Projects</a></li>
+            </ul>
+            </nav>
 </div>
-
-<!--    <div id="left-background">-->
-<!--    <img src="left-space.png" alt="left-wall" id="left-img">-->
-<!--</div>-->
-
-<!--    <div id="left-space1">-->
-<!--        <img src="left-space.png" alt="left-wall" id="left-space-img1">-->
-<!--    </div>-->
-
-<!--    <div id="right-space1">-->
-<!--        <img src="right-space.png" alt="right-wall" id="right-space-img1">-->
-<!--    </div>-->
-<!--<div id="right-background">-->
-<!--    <img src="right-crop.png" alt="image of plant" id="right-img">-->
-<!--</div>-->
+<div> <p>TEST</p></div>
 
 
+<!--    <div id="about-me">-->
+<!--            <h2 class="text-center">About Me</h2>-->
+<!--            <div id="icon-photo">-->
+<!--&lt;!&ndash;            <img src="moriah-icon.jpg" alt="icon" id="icon">&ndash;&gt;-->
+<!--            </div>-->
+<!--                <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.-->
+<!--                <br>-->
+<!--                    <br>-->
+<!--                    I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a> I am seeking full time employment as a Software Engineer beginning in July 2020.-->
+<!--                <br>-->
+<!--                    <br>-->
+<!--                    In addition to my Codeup experience, I bring years of experience as a financial services representative. I have experience with IRS tax guidelines and U.S. Department of Education regulations.-->
+<!--                    <br>-->
+<!--                    <br>-->
+<!--                    My interests include kayaking, aviation and aircraft, robots and artificial intelligence.-->
+<!--            </p>-->
+<!--        </div>-->
 
 
-</container>
+
+
+
+
+
+</main>
 
 <!--&lt;!&ndash;BRIGHT WEBSITE&ndash;&gt;-->
 
