--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
             </nav>
 </div>
-<div> <p>TEST</p></div>
+<div id="name"><h1>Moriah Humphries</h1></div>
 
 
 <!--    <div id="about-me">-->
