added img folder, relocated imgs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <main id="main-container">
 <div id="sidebar">
 <!--    <img src="wood.jpg" alt="wood pattern" id="sidebar-img">-->
-    <div id="navbar-section">-->
+    <div id="navbar-section">
             <nav id="navbar">
             <ul class="d-flex nav flex-column">
                 <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
@@ -21,9 +21,10 @@
             </ul>
             </nav>
 </div>
+</div>
 <div id="name"><h1>Moriah Humphries</h1></div>
 
-
+</main>
 <!--    <div id="about-me">-->
 <!--            <h2 class="text-center">About Me</h2>-->
 <!--            <div id="icon-photo">-->
@@ -48,7 +49,7 @@
 
 
 
-</main>
+
 
 <!--&lt;!&ndash;BRIGHT WEBSITE&ndash;&gt;-->
 
@@ -165,7 +166,7 @@
 
 
 
-</main>
+
 
 <script src=".gitignore/keys.js"></script>
 <script src="jquery.js"></script>
