updated background image

--- a/index.html
+++ b/index.html
@@ -11,24 +11,23 @@
 <body>
 <main id="main-container">
 <div id="sidebar">
-<!--    <img src="wood.jpg" alt="wood pattern" id="sidebar-img">-->
     <div id="navbar-section">
             <nav id="navbar">
             <ul class="d-flex nav flex-column">
-                <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
+                <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
                 <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
                 <li class="nav-li"><a href="#project-anchor">Projects</a></li>
             </ul>
             </nav>
 </div>
 </div>
-<div id="name"><h1>Moriah Humphries</h1></div>
+<!--<div id="name"><h1>Moriah Humphries</h1></div>-->
 
 </main>
 <!--    <div id="about-me">-->
 <!--            <h2 class="text-center">About Me</h2>-->
 <!--            <div id="icon-photo">-->
-<!--&lt;!&ndash;            <img src="moriah-icon.jpg" alt="icon" id="icon">&ndash;&gt;-->
+<!--&lt;!&ndash;            <img src="img/moriah-icon.jpg" alt="icon" id="icon">&ndash;&gt;-->
 <!--            </div>-->
 <!--                <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.-->
 <!--                <br>-->
@@ -55,14 +54,14 @@
 
 <!--&lt;!&ndash;Header Img&ndash;&gt;-->
 <!--<div id="header-div">-->
-<!--<img id="header-image" src="moriah.jpg" alt="cartoon of Moriah and a cat">-->
+<!--<img id="header-image" src="img/moriah.jpg" alt="cartoon of Moriah and a cat">-->
 <!--</div>-->
 
 <!--&lt;!&ndash;Nav Bar&ndash;&gt;-->
 <!--<div id="navbar-section">-->
 <!--    <nav id="navbar">-->
 <!--    <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">-->
-<!--        <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>-->
+<!--        <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>-->
 <!--        <li class="nav-li"><a href="#connect-anchor">Connect</a></li>-->
 <!--        <li class="nav-li"><a href="#project-anchor">Projects</a></li>-->
 <!--    </ul>-->
@@ -77,7 +76,7 @@
 <!--<div id="about-me">-->
 <!--    <h2 class="text-center">About Me</h2>-->
 <!--    <div id="icon-photo" class="d-flex justify-content-center mb-3">-->
-<!--    <img src="moriah-icon.jpg" alt="icon" id="icon">-->
+<!--    <img src="img/moriah-icon.jpg" alt="icon" id="icon">-->
 <!--    </div>-->
 <!--        <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.-->
 <!--        <br>-->
@@ -133,7 +132,7 @@
 <!--            <br>-->
 <!--            The user can also drag and drop the pin to update the weather for the pin's location.-->
 <!--        </p>-->
-<!--        <img src="weatherimage.png" alt="weather project image" id="weather-img">-->
+<!--        <img src="img/weatherimage.png" alt="weather project image" id="weather-img">-->
 <!--    </div>-->
 
 <!--&lt;!&ndash;    Coffee Project&ndash;&gt;-->
