updated side bar to disappear except for L and XL screens

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
 <main id="main-container">
-<div id="sidebar">
+
+<!--    Side Navbar - XL and L only-->
+
+<div id="sidebar" class="d-none d-xl-block d-lg-block d-xl-none">
     <div id="navbar-section">
-            <nav id="navbar">
+            <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
             <ul class="d-flex nav flex-column">
                 <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
                 <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
