updated mobile nav bar

--- a/index.html
+++ b/index.html
@@ -13,20 +13,33 @@
 
 <!--    Side Navbar - XL and L only-->
 
-<div id="sidebar" class="d-none d-xl-block d-lg-block d-xl-none">
-    <div id="navbar-section">
-            <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
-            <ul class="d-flex nav flex-column">
-                <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
-                <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
-                <li class="nav-li"><a href="#project-anchor">Projects</a></li>
+<!--<div id="sidebar" class="d-none d-xl-block d-lg-block d-xl-none">-->
+<!--    <div id="navbar-section">-->
+<!--            <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">-->
+<!--            <ul class="d-flex nav flex-column">-->
+<!--                <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>-->
+<!--                <li class="nav-li"><a href="#connect-anchor">Connect</a></li>-->
+<!--                <li class="nav-li"><a href="#project-anchor">Projects</a></li>-->
+<!--            </ul>-->
+<!--            </nav>-->
+<!--</div>-->
+<!--</div>-->
+
+    <!--    Top Navbar xs, small, med only-->
+    <div id="navbar-section-small" class="d-block d-sm-none d-sm-block d-md-none d-md-block d-lg-none">
+        <nav id="navbar-small">
+            <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
+                <li class="nav-li-small" id="icon-li-mobile"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon-mobile" class="icon-small">About Me</a></li>
+                <li class="nav-li-small"><a href="#connect-anchor">Connect</a></li>
+                <li class="nav-li-small"><a href="#project-anchor">Projects</a></li>
             </ul>
-            </nav>
-</div>
-</div>
-<!--<div id="name"><h1>Moriah Humphries</h1></div>-->
+        </nav>
+    </div>
 
 </main>
+<!--<div id="name"><h1>Moriah Humphries</h1></div>-->
+
+
 <!--    <div id="about-me">-->
 <!--            <h2 class="text-center">About Me</h2>-->
 <!--            <div id="icon-photo">-->
