updated icon size, stretching on actual phone screens

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a> I am seeking full time employment as a Software Engineer beginning in July 2020.
             <br>
             <br>
-            In addition to my Codeup experience, I bring years of experience as a financial services representative. I have experience with IRS tax guidelines and U.S. Department of Education regulations.
+            I am an avid knowledge collector, seeking to expand the ways humans adapt to and interface with the machines in their world.
             <br>
             <br>
-            My interests include kayaking, aviation and aircraft, robots and artificial intelligence.
+            I am passionate about mechanical and software solutions that improve safety and quality of life for all. I believe in equitable access to the technology and training needed to assist workers with new skills as automation and software technology evolves.
         </p>
     </div>
 
