updated about me section position

--- a/index-bright.html
+++ b/index-bright.html
@@ -5,7 +5,7 @@
     <title>Moriah Humphries - BRIGHT</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="webpage-style.css">
+    <link rel="stylesheet" href="style-bright.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
@@ -15,14 +15,14 @@
 
 <!--Header Img-->
 <div id="header-div">
-<img id="header-image" src="moriah.jpg" alt="cartoon of Moriah and a cat">
+<img id="header-image" src="img/moriah.jpg" alt="cartoon of Moriah and a cat">
 </div>
 
 <!--Nav Bar-->
 <div id="navbar-section">
     <nav id="navbar">
     <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
-        <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
+        <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
         <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
         <li class="nav-li"><a href="#project-anchor">Projects</a></li>
     </ul>
@@ -37,7 +37,7 @@
 <div id="about-me">
     <h2 class="text-center">About Me</h2>
     <div id="icon-photo" class="d-flex justify-content-center mb-3">
-    <img src="moriah-icon.jpg" alt="icon" id="icon">
+    <img src="img/moriah-icon.jpg" alt="icon" id="icon">
     </div>
         <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
         <br>
@@ -93,7 +93,7 @@
             <br>
             The user can also drag and drop the pin to update the weather for the pin's location.
         </p>
-        <img src="weatherimage.png" alt="weather project image" id="weather-img">
+        <img src="img/weatherimage.png" alt="weather project image" id="weather-img">
     </div>
 
 <!--    Coffee Project-->
@@ -108,7 +108,7 @@ Created with a partner during a pair programming exercise in Codeup's Javascript
 
         This application allows for the user to select their desired roast of coffee, and search by name within the roast category.
     </p>
-        <img src="coffeeimage.png" alt="coffee project image" id="coffee-img">
+        <img src="img/coffeeimage.png" alt="coffee project image" id="coffee-img">
     </div>
 
 
