updated spacing on navbar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="navbar-section-small" class="d-block d-sm-none d-sm-block d-md-none d-md-block d-lg-none">
         <nav id="navbar-small">
             <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
-                <li class="nav-li-small" id="icon-li-mobile"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon-mobile" class="icon-small">About Me</a></li>
+                <li class="nav-li-small" id="icon-li-mobile"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon-mobile" class="icon-small mr-1">About Me</a></li>
                 <li class="nav-li-small"><a href="#connect-anchor">Connect</a></li>
                 <li class="nav-li-small"><a href="#project-anchor">Projects</a></li>
             </ul>
