--- a/index.html
+++ b/index.html
@@ -88,78 +88,74 @@
 
         <!--    Weather Project-->
 
-        <div id="weather-project">
-            <h5 id="weather-header">Weather Project</h5>
-            <br>
-            <p class="outside-link">
-                An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
-                <br>
-                <br>
-                The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.
-                <br>
-                <br>
-                The user can also drag and drop the pin to update the weather for the pin's location.
-            </p>
-            <img src="img/weatherimage.png" alt="weather project image" id="weather-img">
-        </div>
+<!--        <div id="weather-project">-->
+<!--            <h5 id="weather-header">Weather Project</h5>-->
+<!--            <br>-->
+<!--            <p class="outside-link">-->
+<!--                An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>-->
+<!--                <br>-->
+<!--                <br>-->
+<!--                The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.-->
+<!--                <br>-->
+<!--                <br>-->
+<!--                The user can also drag and drop the pin to update the weather for the pin's location.-->
+<!--            </p>-->
+<!--            <img src="img/weatherimage.png" alt="weather project image" id="weather-img">-->
+<!--        </div>-->
 
-        <!--    Coffee Project-->
+<!--        &lt;!&ndash;    Coffee Project&ndash;&gt;-->
 
-        <div id="coffee-project">
-            <h5 id="coffee-header">Coffee Project</h5>
+<!--        <div id="coffee-project">-->
+<!--            <h5 id="coffee-header">Coffee Project</h5>-->
 
-            <p>
-                Created with a partner during a pair programming exercise in Codeup's Javascript module.
-                <br>
-                <br>
+<!--            <p>-->
+<!--                Created with a partner during a pair programming exercise in Codeup's Javascript module.-->
+<!--                <br>-->
+<!--                <br>-->
 
-                This application allows for the user to select their desired roast of coffee, and search by name within the roast category.
-            </p>
-            <img src="img/coffeeimage.png" alt="coffee project image" id="coffee-img">
-        </div>
+<!--                This application allows for the user to select their desired roast of coffee, and search by name within the roast category.-->
+<!--            </p>-->
+<!--            <img src="img/coffeeimage.png" alt="coffee project image" id="coffee-img">-->
+<!--        </div>-->
     </div>
 
 <!--    Test Project Carousel-->
 
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-touch="true">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" data-interval="3000">
                 <img src="img/weatherimage.png" id="weather-img-car" class="d-block w-100" alt="weather project image">
                 <div class="carousel-caption d-none d-md-block">
 <!--            Slide 1-->
                     <h5>Open Weather Map</h5>
-                    <p class="outside-link">
-                        An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
-                        <br>
-                        <br>
-                        The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.
-                        <br>
-                        <br>
-                        The user can also drag and drop the pin to update the weather for the pin's location.
-                    </p>
+<!--                    <p class="outside-link">-->
+<!--                        An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>-->
+<!--                        <br>-->
+<!--                        The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.-->
+<!--                        <br>-->
+<!--                        The user can also drag and drop the pin to update the weather for the pin's location.-->
+<!--                    </p>-->
                 </div>
             </div>
 <!--            Slide 2-->
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-item" data-interval="3000" id="weather-image">
+                <img src="img/coffeeimage.png" id="coffee-img-car" class="d-block w-100" alt="coffee project image">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Coffee Project</h5>
                     <p>
                         Created with a partner during a pair programming exercise in Codeup's Javascript module.
                         <br>
-                        <br>
-
                         This application allows for the user to select their desired roast of coffee, and search by name within the roast category.
                     </p>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img src="img/coffeeimage.png" id="coffee-img-car" class="d-block w-100" alt="coffee project image">
+            <div class="carousel-item" data-interval="3000">
+                <img src="img/coffeeimage.png" id="coffee-img-car2" class="d-block w-100" alt="coffee project image">
                 <div class="carousel-caption d-none d-md-block">
 
 
@@ -173,7 +169,7 @@
             <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" style="color:red" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
