updated image sizing to fix carousel issues

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <!--            </p>-->
 <!--            <img src="img/coffeeimage.png" alt="coffee project image" id="coffee-img">-->
 <!--        </div>-->
-    </div>
+
 
 <!--    Test Project Carousel-->
 
@@ -169,11 +169,11 @@
             <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" style="color:red" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
-
+    </div>
 
 
 </main>
