styling changes to margins, added technical skills to about me

--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
             <br>
             <br>
             I am passionate about mechanical and software solutions that improve safety and quality of life for all. I believe in equitable access to the technology and training needed to assist workers with new skills as automation and software technology evolves.
+            <br>
+            <br>
+        <h2 class="text-center">Technical skills</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>BootStrap</li>
+            <li>JavaScript</li>
+            <li>jQuery</li>
+            <li>Object-Oriented Programming</li>
+            <li>Java SE</li>
+            <li>Java EE (Servlets, JSP)</li>
+            <li>Spring Boot Framework</li>
+            <li>MySQL</li>
+            <li>Thymeleaf</li>
+            <li>Test-Driven Development</li>
+            <li>Paired Programming</li>
+            <li>VCS with Git</li>
+        </ul>
         </p>
     </div>
 
@@ -133,13 +152,13 @@
                 <div class="carousel-caption d-none d-md-block">
 <!--            Slide 1-->
                     <h5>Open Weather Map</h5>
-<!--                    <p class="outside-link">-->
-<!--                        An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>-->
-<!--                        <br>-->
-<!--                        The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.-->
-<!--                        <br>-->
-<!--                        The user can also drag and drop the pin to update the weather for the pin's location.-->
-<!--                    </p>-->
+                    <p class="outside-link">
+                        An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
+                        <br>
+                        The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.
+                        <br>
+                        The user can also drag and drop the pin to update the weather for the pin's location.
+                    </p>
                 </div>
             </div>
 <!--            Slide 2-->
